// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch component > Extra Large switch disabled should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-checked="false"
        class="bg-gray-5 data-[state=checked]:bg-green/50 w-14 h-8 rounded-full relative outline-none"
        data-disabled=""
        data-state="unchecked"
        data-testid="switch"
        disabled=""
        id="switch"
        role="switch"
        type="button"
        value="on"
      >
        <span
          class="block bg-white rounded-full transition-transform duration-100 translate-x-[3px] data-[state=checked]:translate-x-[25px] will-change-transform w-7 h-7"
          data-disabled=""
          data-state="unchecked"
        />
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-checked="false"
      class="bg-gray-5 data-[state=checked]:bg-green/50 w-14 h-8 rounded-full relative outline-none"
      data-disabled=""
      data-state="unchecked"
      data-testid="switch"
      disabled=""
      id="switch"
      role="switch"
      type="button"
      value="on"
    >
      <span
        class="block bg-white rounded-full transition-transform duration-100 translate-x-[3px] data-[state=checked]:translate-x-[25px] will-change-transform w-7 h-7"
        data-disabled=""
        data-state="unchecked"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch component > Extra Large switch should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-checked="false"
        class="bg-gray-10 data-[state=checked]:bg-green w-14 h-8 rounded-full relative outline-none"
        data-state="unchecked"
        data-testid="switch"
        id="switch"
        role="switch"
        type="button"
        value="on"
      >
        <span
          class="block bg-white rounded-full transition-transform duration-100 translate-x-[3px] data-[state=checked]:translate-x-[25px] will-change-transform w-7 h-7"
          data-state="unchecked"
        />
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-checked="false"
      class="bg-gray-10 data-[state=checked]:bg-green w-14 h-8 rounded-full relative outline-none"
      data-state="unchecked"
      data-testid="switch"
      id="switch"
      role="switch"
      type="button"
      value="on"
    >
      <span
        class="block bg-white rounded-full transition-transform duration-100 translate-x-[3px] data-[state=checked]:translate-x-[25px] will-change-transform w-7 h-7"
        data-state="unchecked"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch component > Large switch disabled should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-checked="false"
        class="bg-gray-5 data-[state=checked]:bg-green/50 w-12 h-7 rounded-full relative outline-none"
        data-disabled=""
        data-state="unchecked"
        data-testid="switch"
        disabled=""
        id="switch"
        role="switch"
        type="button"
        value="on"
      >
        <span
          class="block bg-white rounded-full transition-transform duration-100 translate-x-[3px] data-[state=checked]:translate-x-[21px] will-change-transform w-6 h-6"
          data-disabled=""
          data-state="unchecked"
        />
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-checked="false"
      class="bg-gray-5 data-[state=checked]:bg-green/50 w-12 h-7 rounded-full relative outline-none"
      data-disabled=""
      data-state="unchecked"
      data-testid="switch"
      disabled=""
      id="switch"
      role="switch"
      type="button"
      value="on"
    >
      <span
        class="block bg-white rounded-full transition-transform duration-100 translate-x-[3px] data-[state=checked]:translate-x-[21px] will-change-transform w-6 h-6"
        data-disabled=""
        data-state="unchecked"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch component > Large switch should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-checked="false"
        class="bg-gray-10 data-[state=checked]:bg-green w-12 h-7 rounded-full relative outline-none"
        data-state="unchecked"
        data-testid="switch"
        id="switch"
        role="switch"
        type="button"
        value="on"
      >
        <span
          class="block bg-white rounded-full transition-transform duration-100 translate-x-[3px] data-[state=checked]:translate-x-[21px] will-change-transform w-6 h-6"
          data-state="unchecked"
        />
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-checked="false"
      class="bg-gray-10 data-[state=checked]:bg-green w-12 h-7 rounded-full relative outline-none"
      data-state="unchecked"
      data-testid="switch"
      id="switch"
      role="switch"
      type="button"
      value="on"
    >
      <span
        class="block bg-white rounded-full transition-transform duration-100 translate-x-[3px] data-[state=checked]:translate-x-[21px] will-change-transform w-6 h-6"
        data-state="unchecked"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch component > Medium switch disabled should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-checked="false"
        class="bg-gray-5 data-[state=checked]:bg-green/50 w-8 h-5 rounded-full relative outline-none"
        data-disabled=""
        data-state="unchecked"
        data-testid="switch"
        disabled=""
        id="switch"
        role="switch"
        type="button"
        value="on"
      >
        <span
          class="block bg-white rounded-full transition-transform duration-100 translate-x-[3px] data-[state=checked]:translate-x-[13px] will-change-transform w-4 h-4"
          data-disabled=""
          data-state="unchecked"
        />
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-checked="false"
      class="bg-gray-5 data-[state=checked]:bg-green/50 w-8 h-5 rounded-full relative outline-none"
      data-disabled=""
      data-state="unchecked"
      data-testid="switch"
      disabled=""
      id="switch"
      role="switch"
      type="button"
      value="on"
    >
      <span
        class="block bg-white rounded-full transition-transform duration-100 translate-x-[3px] data-[state=checked]:translate-x-[13px] will-change-transform w-4 h-4"
        data-disabled=""
        data-state="unchecked"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch component > Medium switch should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-checked="false"
        class="bg-gray-10 data-[state=checked]:bg-green w-8 h-5 rounded-full relative outline-none"
        data-state="unchecked"
        data-testid="switch"
        id="switch"
        role="switch"
        type="button"
        value="on"
      >
        <span
          class="block bg-white rounded-full transition-transform duration-100 translate-x-[3px] data-[state=checked]:translate-x-[13px] will-change-transform w-4 h-4"
          data-state="unchecked"
        />
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      aria-checked="false"
      class="bg-gray-10 data-[state=checked]:bg-green w-8 h-5 rounded-full relative outline-none"
      data-state="unchecked"
      data-testid="switch"
      id="switch"
      role="switch"
      type="button"
      value="on"
    >
      <span
        class="block bg-white rounded-full transition-transform duration-100 translate-x-[3px] data-[state=checked]:translate-x-[13px] will-change-transform w-4 h-4"
        data-state="unchecked"
      />
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
